@@ -1,3 +1,7 @@
+2002-06-26  Jody Goldberg <jody@gnome.org>
+
+	* file-types-capplet.c (main) : blah, test things _before_ I commit.
+
 2002-06-25  Jody Goldberg <jody@gnome.org>
 
 	* mime-edit-dialog.c (mime_add_dialog_new) : add de
